update scrap
